--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,3 +1,3 @@
 noremap <space>dfk ddinewword<Esc>
 noremap <space>dfj onewword<Esc>
-noremap <space>dfdfj :source ~/.ideavimrc
+noremap <space>dfdfj :source ~/.ideavimrc<CR>
