--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,4 +1,4 @@
-noremap <space>dfk ddinewword<Esc>
-noremap <space>dfj onewword<Esc>
-noremap <space>dfdfj :source ~/.ideavimrc<CR>
-noremap <space>dfdj onewword2<Esc>
+nmap <space>dfk ddinewword<Esc>
+nmap <space>dfj onewword<Esc>
+nmap <space>dfdfj :source ~/.ideavimrc<CR>
+nmap <space>dfdj onewword2<Esc>
